# dashGTK

./: .gitignore  CMakeLists.txt  dash.c  dash.h  gisagauge.c  main.c
.cache/clangd/index/: dash.c.0663EA80ABF38369.idx  dash.h.69D15D17EE2E63B4.idx  (+3 more)
.ccls-cache/@@home@vincent@Documents@formul@formuleLocal@dashGTK/: @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  @usr@include@bits@types@struct_FILE.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@cairo@cairo-deprecated.h.blob  @usr@include@cairo@cairo-features.h.blob  @usr@include@cairo@cairo-version.h.blob  @usr@include@cairo@cairo.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@sys@cdefs.h.blob  @usr@lib@clang@11.1.0@include@stdarg.h.blob  @usr@lib@clang@11.1.0@include@stdbool.h.blob  @usr@lib@clang@11.1.0@include@stddef.h.blob  @usr@local@include@gtk-3.0@gtk@gtk.h.blob
.ccls-cache/@home@vincent@Documents@formul@formuleLocal@dashGTK/: gisagauge.h  gisagauge.h.blob  main.c  main.c.blob
